apply plugin: 'com.android.application'

def mapProperties = new Properties()
try {
    mapProperties.load(new FileInputStream(rootProject.file("map.properties")))
}
catch (FileNotFoundException fnf) {
    mapProperties['google_maps_api_key'] = 'MISSING'
}

try {
    mapProperties['google_creds'] = new File('credentials.json').text
}
catch (FileNotFoundException fnf) {
    mapProperties['google_creds'] = 'MISSING'
}

android {
    compileSdkVersion 31
    defaultConfig {
        applicationId "com.example.clicker"
        minSdkVersion 26
        targetSdkVersion 31
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        manifestPlaceholders = [mapApiKey: mapProperties['google_maps_api_key'], googleCreds: mapProperties['google_creds']]
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    packagingOptions {
        exclude "META-INF/DEPENDENCIES"
    }
}

apply plugin: 'io.objectbox' // after applying Android plugin

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'com.android.support:support-compat:31.0.0'
    implementation 'com.android.volley:volley:1.2.1'
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    implementation 'androidx.preference:preference:1.2.0'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'com.google.android.material:material:1.5.0'
    implementation 'com.google.android.gms:play-services-maps:18.0.2'
    implementation 'androidx.room:room-runtime:2.4.1'
    annotationProcessor 'androidx.room:room-compiler:2.4.1'
    implementation 'io.objectbox:objectbox-android:2.9.1'
    implementation 'org.shredzone.commons:commons-suncalc:3.5'
    implementation 'org.locationtech.proj4j:proj4j:1.1.4'
    implementation 'com.google.api-client:google-api-client:1.33.0'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
    implementation 'com.google.apis:google-api-services-sheets:v4-rev20210629-1.32.1'
    testImplementation 'org.json:json:20211205'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    androidTestImplementation 'androidx.test:runner:1.4.0'
    androidTestImplementation 'androidx.test:rules:1.4.0'
}
